updating the logger